--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "mui-file-input",
-  "description": "A color input designed for the React library MUI",
+  "name": "@viclafouch/mui-chips-input",
+  "description": "A chips input designed for the React library MUI",
   "author": "Victor de la Fouchardiere <victor.delafouchardiere@gmail.com> (https://github.com/viclafouch)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/viclafouch/mui-file-input/issues"
+    "url": "https://github.com/viclafouch/mui-chips-input/issues"
   },
   "version": "1.0.2",
   "files": [
     "dist"
   ],
-  "main": "./dist/mui-file-input.umd.js",
-  "module": "./dist/mui-file-input.es.js",
+  "main": "./dist/mui-chips-input.umd.js",
+  "module": "./dist/mui-chips-input.es.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/mui-file-input.es.js",
-      "require": "./dist/mui-file-input.umd.js"
+      "import": "./dist/mui-chips-input.es.js",
+      "require": "./dist/mui-chips-input.umd.js"
     }
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/viclafouch/mui-file-input.git"
+    "url": "git+https://github.com/viclafouch/mui-chips-input.git"
   },
   "keywords": [
     "react",
@@ -58,6 +58,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.0",
+    "@mui/icons-material": "^5.0.0",
     "@types/react": "^17.0.0 || ^18.0.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
@@ -70,6 +71,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
     "@types/react": "^17.0.0 || ^18.0.0",
     "react": "^17.0.0 || ^18.0.0",
