--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
   "peerDependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@mui/material": "^5.0.0",
     "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
     "@types/react": "^17.0.0 || ^18.0.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
@@ -92,6 +92,7 @@
     "@typescript-eslint/parser": "^5.33.1",
     "@viclafouch/eslint-config-viclafouch": "^3.7.0",
     "@vitejs/plugin-react": "^2.0.1",
+    "@vitest/coverage-c8": "^0.22.1",
     "babel-loader": "^8.2.5",
     "eslint": "^8.22.0",
     "eslint-config-airbnb": "^19.0.4",
