docs: update deps

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "test": "vitest",
     "release": "standard-version",
     "coverage": "vitest run --coverage",
-    "prepare": "husky"
+    "prepare": "husky",
+    "preinstall": "npx only-allow pnpm"
   },
   "standard-version": {
     "scripts": {
