--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   ],
   "main": "./dist/mui-chips-input.es.js",
   "types": "./dist/index.d.ts",
+  "type": "module",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/mui-chips-input.es.js",
-      "default": "./dist/mui-chips-input.es.js",
-      "types": "./dist/index.d.ts"
+      "default": "./dist/mui-chips-input.es.js"
     }
   },
   "repository": {
@@ -36,9 +37,10 @@
     "chips"
   ],
   "scripts": {
-    "build": "pnpm lint && pnpm test -- run && vite build",
+    "build": "pnpm lint && pnpm test -- run && vite build && pnpm check-types",
     "lint": "tsc && eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "pnpm lint -- --fix",
+    "check-types": "attw --pack . --ignore-rules cjs-resolves-to-esm",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "vitest",
@@ -49,7 +51,7 @@
   },
   "standard-version": {
     "scripts": {
-      "prerelease": "npm run build"
+      "prerelease": "pnpm run build"
     },
     "skip": {
       "changelog": true
@@ -70,6 +72,7 @@
     }
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.16.4",
     "@babel/core": "^7.25.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
