Added declaration option to build index.d.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "declaration": true,
     "jsx": "react-jsx",
     "baseUrl": "./src",
     "paths": {
