--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.0.0 || ^6.0.0",
     "@mui/material": "^5.0.0 || ^6.0.0",
+    "@mui/system": "^6.1.1",
+    "@mui/types": "^7.2.17",
     "@types/react": "^18.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
@@ -79,6 +81,8 @@
     "@mui/base": "^5.0.0-beta.58",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@mui/system": "^6.1.1",
+    "@mui/types": "^7.2.17",
     "@storybook/addon-actions": "^8.3.3",
     "@storybook/addon-essentials": "^8.3.3",
     "@storybook/addon-interactions": "^8.3.3",
