--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/viclafouch/mui-chips-input/issues"
   },
   "homepage": "https://viclafouch.github.io/mui-chips-input",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "files": [
     "dist"
   ],
@@ -37,7 +37,7 @@
     "chips"
   ],
   "scripts": {
-    "build": "pnpm lint && pnpm test -- run && vite build && pnpm check-types",
+    "build": "pnpm lint && pnpm test -- run && vite build",
     "lint": "tsc && eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "pnpm lint -- --fix",
     "check-types": "attw --pack . --ignore-rules cjs-resolves-to-esm  -f json",
