--- a/package.json
+++ b/package.json
@@ -58,15 +58,13 @@
     }
   },
   "peerDependencies": {
-    "@emotion/react": "^11.13.3",
+    "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.0.0 || ^6.0.0",
-    "@mui/material": "^5.0.0 || ^6.0.0",
-    "@mui/system": "^6.1.1",
-    "@mui/types": "^7.2.17",
-    "@types/react": "^18.0.0",
+    "@mui/material": "^6.0.0",
+    "@types/react": "^18.3.12",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@mui/icons-material": "^6.0.0"
   },
   "peerDependenciesMeta": {
     "@types/react": {
@@ -74,31 +72,29 @@
     }
   },
   "devDependencies": {
-    "@arethetypeswrong/cli": "^0.16.4",
-    "@babel/core": "^7.25.8",
+    "@arethetypeswrong/cli": "^0.17.0",
+    "@babel/core": "^7.26.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/base": "^5.0.0-beta.59",
-    "@mui/icons-material": "^6.1.4",
-    "@mui/material": "^6.1.4",
-    "@mui/system": "^6.1.4",
-    "@mui/types": "^7.2.18",
-    "@storybook/addon-actions": "^8.3.6",
-    "@storybook/addon-essentials": "^8.3.6",
-    "@storybook/addon-interactions": "^8.3.6",
-    "@storybook/addon-links": "^8.3.6",
-    "@storybook/react": "^8.3.6",
-    "@storybook/react-vite": "^8.3.6",
-    "@storybook/test": "^8.3.6",
-    "@testing-library/jest-dom": "^6.6.2",
+    "@mui/base": "^5.0.0-beta.61",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "@storybook/addon-actions": "^8.4.2",
+    "@storybook/addon-essentials": "^8.4.2",
+    "@storybook/addon-interactions": "^8.4.2",
+    "@storybook/addon-links": "^8.4.2",
+    "@storybook/react": "^8.4.2",
+    "@storybook/react-vite": "^8.4.2",
+    "@storybook/test": "^8.4.2",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^22.7.6",
-    "@types/react": "^18.3.11",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@viclafouch/eslint-config-viclafouch": "^4.16.0",
-    "@vitejs/plugin-react": "^4.3.2",
-    "@vitest/coverage-v8": "^2.1.3",
+    "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "^2.1.4",
     "babel-loader": "^9.2.1",
     "eslint": "^8.56.0",
     "husky": "^9.1.6",
@@ -108,10 +104,10 @@
     "react-dom": "^18.3.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "standard-version": "^9.5.0",
-    "storybook": "^8.3.6",
+    "storybook": "^8.4.2",
     "typescript": "^5.6.3",
-    "vite": "^5.4.9",
-    "vite-plugin-dts": "^4.2.4",
-    "vitest": "^2.1.3"
+    "vite": "^5.4.11",
+    "vite-plugin-dts": "^4.3.0",
+    "vitest": "^2.1.4"
   }
 }
