--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.0",
-    "@types/react": "^18.3.12",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@types/react": "^19.0.0 || ^18.3.12",
+    "react": "^19.0.0 || ^18.3.1",
+    "react-dom": "^19.0.0 || ^18.3.1",
     "@mui/icons-material": "^6.0.0"
   },
   "peerDependenciesMeta": {
