--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   ],
   "scripts": {
     "build": "npm run lint && npm run test -- run && vite build",
-    "lint": "tsc && eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "npx tsc --noEmit && eslint",
     "lint:fix": "npm run lint -- --fix",
     "check-types": "attw --pack . --ignore-rules cjs-resolves-to-esm",
     "storybook": "storybook dev -p 6006",
@@ -70,11 +70,10 @@
     }
   },
   "devDependencies": {
-    "@arethetypeswrong/cli": "^0.17.0",
+    "@arethetypeswrong/cli": "^0.17.4",
     "@babel/core": "^7.26.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/base": "^5.0.0-beta.69",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@storybook/addon-actions": "^8.6.4",
@@ -87,14 +86,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@viclafouch/eslint-config-viclafouch": "^4.16.0",
+    "@viclafouch/eslint-config-viclafouch": "^4.20.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.0.8",
     "babel-loader": "^10.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "^9.22.0",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
